--- a/h2/h2.html
+++ b/h2/h2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nullák és egyesek</title>
+    <title>Loading...</title>
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/h2/h2.styles.css">
 </head>
