--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading...</title>
+    <title>Loading... H1</title>
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/index.css">
 </head>
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="/" class="active">H1</a></li>
             <li><a href="/h2/h2.html">H2</a></li>
+            <li><a href="/h3/h3.html">H3</a></li>
         </ul>
     </nav>
 
