--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="/" class="active">H1</a></li>
             <li><a href="/h2/h2.html">H2</a></li>
             <li><a href="/h3/h3.html">H3</a></li>
+            <li><a href="/h4/h4.html">H4</a></li>
         </ul>
     </nav>
 
