--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="/h2/h2.html">H2</a></li>
             <li><a href="/h3/h3.html">H3</a></li>
             <li><a href="/h4/h4.html">H4</a></li>
+            <li><a href="/h5/h5.html">H5</a></li>
         </ul>
     </nav>
 
